GNOME Bugzilla – Bug 782031
gst-validate-images-check.c doesn't build with msvc
Last modified: 2017-05-04 22:17:19 UTC
Created attachment 350826 [details] [review] [PATCH gst-devtools] validate: cast away constness in GOptionEntry msvc warns about a constness issue which breaks building.
Review of attachment 350826 [details] [review]: ::: hooks/pre-commit.hook @@ +64,3 @@ $INDENT ${INDENT_PARAMETERS} \ $newfile 2>> /dev/null + dos2unix $newfile ^ included by mistake I guess?
Created attachment 350829 [details] [review] [PATCH gst-devtools v2] validate: cast away constness in GOptionEntry Oops, right that was a mistake.
ooc, on what msvc version is it failling? (it is working with msvc 19.00.24215.1 afaict)[0] [0] https://ci.appveyor.com/project/thiblahute/gst-build-ge9m5
(In reply to Thibault Saunier from comment #3) > ooc, on what msvc version is it failling? (it is working with msvc > 19.00.24215.1 afaict)[0] > > [0] https://ci.appveyor.com/project/thiblahute/gst-build-ge9m5 This is with 19.10.25019 from the "Build Tools for Visual Studio 2017"
Comment on attachment 350829 [details] [review] [PATCH gst-devtools v2] validate: cast away constness in GOptionEntry > {"result-output-folder", 'r', 0, G_OPTION_ARG_FILENAME, >- &outfolder, >+ (gpointer) & outfolder, I think what's wrong and needs fixing is the const gchar *outfolder;
Created attachment 350901 [details] [review] [PATCH gst-devtools v3] validate: remove const from outfolder changes since v2 - remove const from outfolder instead of casting in GOptionEntry
Review of attachment 350901 [details] [review]: Thanks Scott. Pushed as: commit e1bf823e0c9c2d3d32cb750525bc54598dea7ded Author: Scott D Phillips <scott.d.phillips@intel.com> Date: Mon May 1 13:51:48 2017 -0700 validate: remove const from outfolder GOptionEntry's arg_data is of type gpointer which differs in constness from const gchar*, so remove constness from outfolder. This fixes a build issue with msvc.