validate: remove const from outfolder

GOptionEntry's arg_data is of type gpointer which differs in
constness from const gchar*, so remove constness from outfolder.
This fixes a build issue with msvc.

https://bugzilla.gnome.org/show_bug.cgi?id=782031